syntax = "proto2";

message AppData {
  optional bool onboarded = 1;
  optional bool onboardedAccessibilitySettings = 2;
  optional bool quickSettingsTileAdded = 9;

  optional DrawingMode drawingMode = 3;
  optional OverlayColor overlayColor = 6;
  optional float overlayAreaSize = 4;
  optional float overlaySpeed = 5;

  optional int64 foregroundOverlayStartTime = 7;
  optional int64 foregroundOverlayStopTime = 8;
  optional int64 appDownloadTime = 10;
  optional int64 lastReviewPromptTime = 11;
  optional bool reviewPrompted = 12;
  
  // Color customization fields
  optional int32 appBackgroundColor = 13;
  optional int32 buttonBackgroundColor = 14;
  // Play button color (defaults to black if unset)
  optional int32 playButtonColor = 15;
}

enum DrawingMode {
  NONE = 0;
  DRAW_OVER_OTHER_APPS = 1;
  ACCESSIBILITY_SERVICE = 2;
}

enum OverlayColor {
  BLACK_AND_WHITE = 0;
  BLACK = 1;
  WHITE = 2;
}